fix: strengthen language rule in character prompt, fix IDE warnings, use URI.create for URL (release 3.0.8)